# 2022-huawei-compression-competition

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENCE.md  README.md  build.sh  compress.py  dat.py  hxv.py  prepare.sh  verify.py  yyl.py
cmake/: bch.cmake  brotli.cmake  common.cmake  ctre.cmake  doctest.cmake  fast-lzma2.cmake  fmt.cmake  frozen.cmake  lz4.cmake  mio.cmake  smhasher.cmake  zstd.cmake
include/: bch.h  core.hpp  dat.hpp  hxv.hpp  lz4.h  lz4hc.h  std.hpp  utils.hpp
include/core/: cfd.hpp  core.hpp  dat.hpp  hxv.hpp
include/core/dict/: hxv.hpp
include/dict/: dat.hpp  hxv.hpp
include/fast-lzma2/: atomic.h  compiler.h  count.h  data_block.h  dict_buffer.h  fast-lzma2.h  fastpos_table.h  fl2_compress_internal.h  fl2_errors.h  fl2_internal.h  fl2_pool.h  fl2_threading.h  lzma2_dec.h  lzma2_enc.h  mem.h  platform.h  radix_engine.h  radix_get.h  radix_internal.h  radix_mf.h  range_enc.h  util.h  xxhash.h
include/lz4/: lz4.h  lz4frame.h  lz4frame_static.h  lz4hc.h  xxhash.h
include/utils/: brotli.hpp  counter.hpp  fl2.hpp  seq.hpp  traits.hpp  utils.hpp  zstd.hpp
include/zstd/: zdict.h  zstd.h  zstd_errors.h
src/: bch.c  lz4.c  lz4hc.c  main.cpp  task.cpp
src/fast-lzma2/: dict_buffer.c  fl2_common.c  fl2_compress.c  fl2_decompress.c  fl2_pool.c  fl2_threading.c  lzma2_dec.c  lzma2_enc.c  radix_bitpack.c  radix_mf.c  radix_struct.c  range_enc.c  util.c  xxhash.c
src/linux/: bch.c
src/lz4/: lz4.c  lz4frame.c  lz4hc.c  xxhash.c
toolchains/gnu/: host.cmake
wrapped/smhasher/include/: AvalancheTest.h  Bitvec.h  City.h  DifferentialTest.h  Hashes.h  KeysetTest.h  MurmurHash1.h  (+11 more)
(+25 files in other folders)
